--- a/pages/projects/project.html
+++ b/pages/projects/project.html
@@ -5,18 +5,18 @@
     <title>NAYOUNG LEE.com</title>
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="\brina.lny\style\main.css">
+    <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
 <body class="nohero">
     <header>
     <div class="container">
-        <a href="\brina.lny\index.html" class="headA">NAYOUNG LEE</a>
+        <a href="\NAYOUNG-LEE\index.html" class="headA">NAYOUNG LEE</a>
         <new class="headB">
             <ul>
-                <li><a href="\brina.lny\pages\career\career.html">Career</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\career\career.html">Career</a></li>
                 <li><a href=".\project.html">Project</a></li>
-                <li><a href="\brina.lny\pages\profile.html">Profile</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\profile.html">Profile</a></li>
             </ul>
         </new>
     </div>
@@ -26,7 +26,7 @@
         <div class="container">
             <h2>Plantary</h2>
             <h6> 기획∙UI 디자인∙Backend∙홍보 담당, 총 5명, 2021년</h6>
-            <img src="\brina.lny\image\Plantary.png" alt="">
+            <img src="\NAYOUNG-LEE\image\Plantary.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
                 <li>∙ 반려식물 커뮤니티 Web 서비스 기획, 디자인, 개발 및 배포</li>
@@ -40,7 +40,7 @@
         <div class="container">
             <h2>봄 대학생 디자인 학술발표대회</h2>
             <h6>장려상, 한국디자인학회, 총 3명, 2021년 5월</h6>
-            <img src="\brina.lny\image\KDA.png" alt="">
+            <img src="\NAYOUNG-LEE\image\KDA.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
                 <li>∙ 친환경 쇼핑몰 IT 서비스 기획 프로세스 논문화</li>
@@ -59,20 +59,20 @@
                 <div>
                     <h3>About</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\profile.html">NAYOUNG LEE</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\profile.html">NAYOUNG LEE</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Career</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\career\career.html">Kakao Enterprise</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\career\career.html">Kakao Enterprise</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Project</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
-                        <li><a href="\brina.lny\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
                     </ul>
                 </div>
             </nav>
