--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -5,18 +5,18 @@
     <title>NAYOUNG LEE.com</title>
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="\brina.lny\style\main.css">
+    <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
 <body class="nohero">
     <header>
     <div class="container">
-        <a href="\brina.lny\index.html" class="headA">NAYOUNG LEE</a>
+        <a href="\NAYOUNG-LEE\index.html" class="headA">NAYOUNG LEE</a>
         <new class="headB">
             <ul>
                 <li><a href=".\career.html">Career</a></li>
-                <li><a href="\brina.lny\pages\projects\project.html">Project</a></li>
-                <li><a href="\brina.lny\pages\profile.html">Profile</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Project</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\profile.html">Profile</a></li>
             </ul>
         </new>
     </div>
@@ -26,7 +26,7 @@
         <div class="container">
             <h2>Technical Writer</h2>
             <h6>Kakao Enterprise, Intern, 2022.05 -<br>사용자의 니즈와 서비스 경험에 적합한 기술 문서를 전달하는 테크니컬 라이터</h6>
-            <img src="\brina.lny\image\KiC.png" alt="">
+            <img src="\NAYOUNG-LEE\image\KiC.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
                 <li>∙ Kakao i Cloud User Guide의 전체 32개 문서 중 24개 전면 개편 및 품질 개선</li>
@@ -66,20 +66,20 @@
                 <div>
                     <h3>About</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\profile.html">NAYOUNG LEE</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\profile.html">NAYOUNG LEE</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Career</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\career\career.html">Kakao Enterprise</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\career\career.html">Kakao Enterprise</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Project</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
-                        <li><a href="\brina.lny\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
                     </ul>
                 </div>
             </nav>
