--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="\brina.lny\style\main.css">
+    <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
 <body class="nohero">
     <header>
     <div class="container">
-        <a href="\brina.lny\index.html" class="headA">NAYOUNG LEE</a>
+        <a href="\NAYOUNG-LEE\index.html" class="headA">NAYOUNG LEE</a>
         <new class="headB">
             <ul>
-                <li><a href="\brina.lny\pages\career\career.html">Career</a></li>
-                <li><a href="\brina.lny\pages\projects\project.html">Project</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\career\career.html">Career</a></li>
+                <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Project</a></li>
                 <li><a href=".\profile.html">Profile</a></li>
             </ul>
         </new>
@@ -68,20 +68,20 @@
                 <div>
                     <h3>About</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\profile.html">NAYOUNG LEE</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\profile.html">NAYOUNG LEE</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Career</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\career\career.html">Kakao Enterprise</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\career\career.html">Kakao Enterprise</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Project</h3>
                     <ul>
-                        <li><a href="\brina.lny\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
-                        <li><a href="\brina.lny\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
                     </ul>
                 </div>
             </nav>
