--- a/pages/profile.html
+++ b/pages/profile.html
@@ -26,13 +26,13 @@
     <article class="profile">
         <div class="container">
         <h2>NAYOUNG LEE</h2>
-        <p>Brina Lee는 쓸모를 중요시하지만 아름다움 또한 사랑하는 UX 디자이너입니다. </p>
+        <p>NaYoung Lee는 쓸모를 중요시하지만 아름다움 또한 사랑하는 UX 디자이너입니다. </p>
         <h5>Skills</h5>
         <div class="skills">
             <ul class='no_dot'>
-                <li>∙ HTML, Markdown, CS, JavaScript</li>
+                <li>∙ HTML, Markdown, CSS, JavaScript</li>
                 <li>∙ GitHub, GitBook</li>
-                <li>∙ Figma, Adobe, Xd, Ps, Ai</li>
+                <li>∙ Figma, Adobe XD, Adobe Photoshop, Adobe Illustrator</li>
                 <li>∙ Python</li>
             </ul>
         </div>
