--- a/pages/projects/project.html
+++ b/pages/projects/project.html
@@ -29,10 +29,10 @@
             <img src="\NAYOUNG-LEE\image\Plantary.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
-                <li>∙ 반려식물 커뮤니티 Web 서비스 기획, 디자인, 개발 및 배포</li>
+                <li>∙ 반려식물 커뮤니티 Web 서비스 기획, UI/UX 디자인, 개발 및 배포</li>
                 <li>∙ Django, HTML, CSS, JavaScript 기반의 웹사이트 개발 및 AWS 배포</li>
                 <li>∙ Python 기반의 데이터 마이닝과 빅데이터 분석을 통한 서비스 기획 담당</li>
-                <li>∙ Adobe XD 사용한 웹사이트 UI 디자인 담당</li>
+                <li>∙ Adobe XD 사용한 웹사이트 UI/UX 디자인 담당</li>
                 <li>∙ Backend 개발자로서 온라인 쇼핑몰 기능 구현 담당</li>
                 <li>∙ 사업 전략 기획 및 피칭과 외부 커뮤니케이션 및 홍보 담당</li>
             </ul>
@@ -43,9 +43,9 @@
             <img src="\NAYOUNG-LEE\image\KDA.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
-                <li>∙ 친환경 쇼핑몰 IT 서비스 기획 프로세스 논문화</li>
-                <li>∙ 서비스 개선을 위한 시장 분석 및 비즈니스 모델 도출</li>
-                <li>∙ App UI 디자인 및 오프라인 연계 상품 기획</li>
+                <li>∙ 친환경 쇼핑몰 App 서비스 기획 프로세스 논문화</li>
+                <li>∙ 시장 분석 및 비즈니스 모델, 더블 다이아몬드 프로세스 기반의 서비스 기획 도출</li>
+                <li>∙ App UI/UX 디자인 및 오프라인 연계 상품 기획</li>
             </ul>
         </div>
     </article>
