--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -5,6 +5,8 @@
     <title>NAYOUNG LEE.com</title>
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
@@ -52,8 +54,26 @@
             <h5>Reference</h5>
             <ul class='no_dot'>
                 <li><a href="https://console.kakaoi.io/docs/">∙ Kakao i Cloud User Guide</a></li>
+                <li><a href="https://kakaoenterprise.gitbook.io/kic-style-guide/">∙ Kakao i Cloud Docs Style Guide</a></li>
                 <li><a href="https://tech.kakaoenterprise.com/187">∙ 기술블로그 '테크니컬 라이터와 Git'</a></li>
             </ul>
+        <h4>Projects</h4>
+        <div class="projects">
+            <div>
+                <h5>01  Kakao i Cloud User Guide</h5>
+                <p><b>| Before</b></p>
+                <img src="\NAYOUNG-LEE\image\KiC_Before.png" alt="">
+                <p><b>| After</b></p>
+                <img src="\NAYOUNG-LEE\image\KiC_After.png" alt="">
+            </div>
+            <div>
+                <h5>02  Kakao i Cloud Docs Style Guide</h5>
+                <img src="\NAYOUNG-LEE\image\KiC_DocsStyleGuide.png" alt="">
+            </div>
+            <div>
+                <h5>03  테크니컬 라이터와 Git</h5>
+                <img src="\NAYOUNG-LEE\image\KiC_Blog.png" alt="">
+            </div>
         </div>
     </article>
                 
