--- a/pages/projects/project.html
+++ b/pages/projects/project.html
@@ -5,6 +5,8 @@
     <title>NAYOUNG LEE.com</title>
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
@@ -25,7 +27,7 @@
     <article class="project">
         <div class="container">
             <h2>Plantary</h2>
-            <h6> 기획∙UI 디자인∙Backend∙홍보 담당, 총 5명, 2021년</h6>
+            <h6> 기획∙UI/UX 디자인∙Backend∙홍보 담당, 총 5명, 2021년</h6>
             <img src="\NAYOUNG-LEE\image\Plantary.png" alt="">
             <h5>Performance</h5>
             <ul class='no_dot'>
