--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -61,6 +61,14 @@
         <div class="projects">
             <div>
                 <h5>01  Kakao i Cloud User Guide</h5>
+                <p><b>| Process</b></p>
+                <p>초안 작성 - 1차 리라이팅 - 리뷰 및 피드백 - 2차 리라이팅 - 배포</p>
+                <ul>
+                    <li>∙ Kakao i Cloud 기술 문서 전담 및 개선</li>
+                    <li>∙ 서비스 릴리즈에 따른 문서 개선 및 배포 수행 문서</li>
+                    <li>∙ 서비스 담당자와의 직접적인 소통 및 기획서 등으로 서비스 이해 도모</li>
+                    <li>∙ Technical Writing 파트와 타 파트 간 효율적인 협업을 위한 작업 프로세스 개선</li>
+                </ul>    
                 <p><b>| Before</b></p>
                 <img src="\NAYOUNG-LEE\image\KiC_Before.png" alt="">
                 <p><b>| After</b></p>
@@ -68,6 +76,11 @@
             </div>
             <div>
                 <h5>02  Kakao i Cloud Docs Style Guide</h5>
+                <p>Kakao i Cloud User Guide 문서의 통일성 개선 및 효율적인 협업을 위한 Style Guide</p>
+                <ul>
+                    <li>∙ Markdown, 목차, 이미지 등 문서의 통일성 확보를 위한 스타일 가이드 수립</li>
+                    <li>∙ 효율적인 협업을 위한 업무 프로세스 개선 및 스타일 가이로로 인한 업무 효율성 증가</li>
+                </ul>
                 <img src="\NAYOUNG-LEE\image\KiC_DocsStyleGuide.png" alt="">
             </div>
             <div>
