--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -29,7 +29,7 @@
             <h2>Technical Writer</h2>
             <h6>Kakao Enterprise, Intern, 2022.05 -<br>사용자의 니즈와 서비스 경험에 적합한 기술 문서를 전달하는 테크니컬 라이터</h6>
             <img src="\NAYOUNG-LEE\image\KiC.png" alt="">
-            <h5>Performance</h5>
+            <h5>Performances</h5>
             <ul class='no_dot'>
                 <li>∙ Kakao i Cloud User Guide의 전체 32개 문서 중 24개 전면 개편 및 품질 개선</li>
                 <li>∙ 기술 문서, 사용자 가이드 등 내/외부 문서 리라이팅 및 관리</li>
@@ -63,7 +63,8 @@
                 <h5>01  Kakao i Cloud User Guide</h5>
                 <p><b>| Process</b></p>
                 <p>초안 작성 - 1차 리라이팅 - 리뷰 및 피드백 - 2차 리라이팅 - 배포</p>
-                <ul>
+                <p><b>| Performances</b></p>
+                <ul class='no_dot'>
                     <li>∙ Kakao i Cloud 기술 문서 전담 및 개선</li>
                     <li>∙ 서비스 릴리즈에 따른 문서 개선 및 배포 수행 문서</li>
                     <li>∙ 서비스 담당자와의 직접적인 소통 및 기획서 등으로 서비스 이해 도모</li>
@@ -77,7 +78,8 @@
             <div>
                 <h5>02  Kakao i Cloud Docs Style Guide</h5>
                 <p>Kakao i Cloud User Guide 문서의 통일성 개선 및 효율적인 협업을 위한 Style Guide</p>
-                <ul>
+                <p><b>| Performances</b></p>
+                <ul class='no_dot'>
                     <li>∙ Markdown, 목차, 이미지 등 문서의 통일성 확보를 위한 스타일 가이드 수립</li>
                     <li>∙ 효율적인 협업을 위한 업무 프로세스 개선 및 스타일 가이로로 인한 업무 효율성 증가</li>
                 </ul>
