--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -62,7 +62,7 @@
             <div>
                 <h5>01  Kakao i Cloud User Guide</h5>
                 <p><b>| Process</b></p>
-                <p>초안 작성 - 1차 리라이팅 - 리뷰 및 피드백 - 2차 리라이팅 - 배포</p>
+                <p>초안 작성 - 1차 리라이팅 - 리뷰 및 피드백 - 2차 리라이팅 - Markdown 파일 작업 - 배포</p>
                 <p><b>| Performances</b></p>
                 <ul class='no_dot'>
                     <li>∙ Kakao i Cloud 기술 문서 전담 및 개선</li>
@@ -107,13 +107,13 @@
                 <div>
                     <h3>Career</h3>
                     <ul>
-                        <li><a href="\NAYOUNG-LEE\pages\career\career.html">Kakao Enterprise</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\career\career.html">Technical Writer, Kakao Enterprise</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>Project</h3>
                     <ul>
-                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">Plantary, 반려식물 웹 서비스</a></li>
+                        <li><a href="\NAYOUNG-LEE\pages\projects\project.html">반려식물 커뮤니티 웹 서비스</a></li>
                         <li><a href="\NAYOUNG-LEE\pages\projects\project.html">디자인 학술발표대회, 한국디자인학회</a></li>
                     </ul>
                 </div>
