--- a/pages/projects/project.html
+++ b/pages/projects/project.html
@@ -61,7 +61,7 @@
             <ul class='no_dot'>
                 <li>∙ 더블 다이아몬드 프로세스 기반의 서비스 기획</li>
                 <li>∙ STEEP, 3C 분석을 통한 Desk Research로 시장 및 비즈니스 모델 분석 </li>
-                <li>∙ Interview, Behavior Analysis를 통한 사용자 분석으로</li>
+                <li>∙ Interview, Behavior Analysis를 통한 사용자 분석</li>
                 <li>∙ Service Blueprint, Stakeholders Map로 서비스 프로세스 구체화</li>
                 <li>∙ App UI/UX 디자인 및 오프라인 연계 상품 기획</li>
             </ul>
