2023년 4월 14일 CSS 개편

--- a/pages/career/career.html
+++ b/pages/career/career.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="\NAYOUNG-LEE\style\main.css">
 </head>
 
-<body class="nohero">
+<body class="headermenu">
     <header>
     <div class="container">
         <a href="\NAYOUNG-LEE\index.html" class="headA">NAYOUNG LEE</a>
