--- a/pages/profile.html
+++ b/pages/profile.html
@@ -25,19 +25,15 @@
     </header>
 
     <article class="profile">
-        <div class="container">
-        <h2>NAYOUNG LEE</h2>
-        <p>NaYoung Lee는 쓸모를 중요시하지만 아름다움 또한 사랑하는 UX 디자이너입니다. </p>
-        <h5>Skills</h5>
-        <div class="skills">
+        <div class="profiles">
+            <h2>NAYOUNG LEE</h2>
+            <h6>Skills</h6>
             <ul class='no_dot'>
-                <li>∙ HTML, Markdown, CSS, JavaScript</li>
+                <li>∙ HTML, Markdown, CSS, JavaScript, Django</li>
                 <li>∙ GitHub, GitBook</li>
                 <li>∙ Figma, Adobe XD, Adobe Photoshop, Adobe Illustrator</li>
                 <li>∙ Python</li>
             </ul>
-        </div>
-        <div class="skills">
             <ul class='no_dot'>
                 <li>∙ TOEIC 920</li>
                 <li>∙ GTQ 그래픽기술자격 1급</li>
@@ -47,14 +43,14 @@
     </article>
     
     <article class="profile">
-        <div class="container">
-        <h2>Contact</h2>
-            <div class="profiles">
-                <h5>Email</h5>
+        <div class="contact">
+        <h6>Contact</h6>
+            <div class="contacts">
+                <p><b>Email</b></p>
                 <a href="nylee135@naver.com">brina.lny@gmail.com</a>
             </div>
-            <div class="profiles">
-                <h5>LinkedIn</h5>
+            <div class="contacts">
+                <p><b>LinkedIn</b></p>
                 <a href="https://www.linkedin.com/in/2na0">NaYoung Lee</a>
             </div>
         </div>
