--- a/pages/projects/project.html
+++ b/pages/projects/project.html
@@ -25,14 +25,14 @@
     </header>
 
     <article class="project">
-        <div class="container">
+        <div class="projects">
             <h2>Plantary</h2>
             <h6> 기획∙UI/UX 디자인∙Backend∙홍보 담당, 총 5명, 2021년</h6>
             <img src="\NAYOUNG-LEE\image\Plantary.png" alt="">
             <h5>Performances</h5>
             <ul class='no_dot'>
                 <li>∙ 반려식물 커뮤니티 Web 서비스 기획, UI/UX 디자인, 개발 및 배포</li>
-                <li>∙  HTML, CSS, JavaScript, Django 기반의 웹사이트 개발 및 AWS 배포</li>
+                <li>∙ HTML, CSS, JavaScript, Django 기반의 웹사이트 개발 및 AWS 배포</li>
             </ul>
             <ul class='no_dot'>
                 <li>∙ Python 기반의 데이터 마이닝과 빅데이터 분석을 통한 서비스 기획 담당</li>
@@ -49,7 +49,7 @@
             </ul>
         </div>
 
-        <div class="container">
+        <div class="projects">
             <h2>봄 대학생 디자인 학술발표대회</h2>
             <h6>장려상, 한국디자인학회, 총 3명, 2021년 5월</h6>
             <img src="\NAYOUNG-LEE\image\KDA.png" alt="">
@@ -61,7 +61,7 @@
             <ul class='no_dot'>
                 <li>∙ 더블 다이아몬드 프로세스 기반의 서비스 기획</li>
                 <li>∙ STEEP, 3C 분석을 통한 Desk Research로 시장 및 비즈니스 모델 분석 </li>
-                <li>∙ Interview, Behavior Analysis를 통한 사용자 분석</li>
+                <li>∙ Interview, Behavior Analysis를 통한 사용자 분석으로</li>
                 <li>∙ Service Blueprint, Stakeholders Map로 서비스 프로세스 구체화</li>
                 <li>∙ App UI/UX 디자인 및 오프라인 연계 상품 기획</li>
             </ul>
